# Atlas

./: 404.html  ARCHITECTURE_DECISIONS.md  Agents.md  CONSTITUTION.md  README.md  ROADMAP.md  fonts.txt  fonts2.txt  index.html  mkdocs.yml  pyproject.toml
.github/workflows/: docs.yml
CONSTITUTION/: index.html
about/architecture/: index.html
about/core-concepts/: index.html
about/philosophy/: index.html
about/roadmap/: index.html
about/studio-suite/: index.html
about/why-atlas-exists/: index.html
about/why-atlas-is-different/: index.html
architecture/execution-model/: index.html
architecture/model-system/: index.html
architecture/primitives/: index.html
architecture/resolution/: index.html
architecture/runtime-blueprint/: index.html
architecture/worker-lifecycle/: index.html
cli/: main.py
cli/commands/: new.py
compendium/adapters/: index.html
compendium/cli-reference/: index.html
contributing/: index.html
docs/: CONSTITUTION.md  index.md  studio-suite.md
examples/: demo_invocation.py  demo_room.py  demo_translation.py  demo_transport.py
faq/: index.html
installation/: index.html
journey/: index.html
models/: index.html
philosophy/: index.html
roadmap/: index.html
search/: search_index.json
site/: 404.html  index.html
specs/: Architecture.md  Capabilites.md  Capabilities.md  Communication.md  Core.md  Database.md  Events.md  Interface.md  ManifestSchema.md  Models.md  Modules.md  Providers.md  Registry.md  Roles.md  Runtime.md  Storage.md  Workers.md
stdlib/: index.html
studio-suite/: index.html
suite/: atlas.yaml  main.py
(+550 files in other folders)
