[project]
name = "atlas"
version = "0.1.0"
description = "Atlas Architecture & Ecosystem"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "PyYAML>=6.0.1",
    "pydantic>=2.7.0",
    "rich>=13.0.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["runtime*", "atlas_sdk*", "workers*", "cli*", "models*"]

[project.scripts]
atlas = "cli.main:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]

[tool.ruff]
target-version = "py313"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "ANN", "B", "A", "SIM"]

[tool.basedpyright]
pythonVersion = "3.13"
typeCheckingMode = "strict"

[tool.pytest.ini_options]
testpaths = ["runtime/tests", "workers", "sdk"]
asyncio_mode = "auto"
